CF-303 address review feedback